deploy/kubernetes/namespaced/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mbakmegumi
  labels:
    app: mbakmegumi
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: mbakmegumi
  template:
    metadata:
      labels:
        app: mbakmegumi
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mbakmegumi
          image: docker.io/haikelilham/mbakmegumi:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 2Gi
